added logic for sending and receiving can messages

--- a/CanInterface/CanInterface.csproj
+++ b/CanInterface/CanInterface.csproj
@@ -143,6 +143,7 @@
     <Compile Include="MCP2515\Enum\Commands.cs" />
     <Compile Include="MCP2515\Enum\InterruptFlagCode.cs" />
     <Compile Include="MCP2515\Enum\MessageType.cs" />
+    <Compile Include="MCP2515\Enum\ReceieveBuffer.cs" />
     <Compile Include="MCP2515\Enum\ReceiveBufferOperatingMode.cs" />
     <Compile Include="MCP2515\Enum\RecievedMessage.cs" />
     <Compile Include="MCP2515\Enum\Registers.cs" />
