--- a/CanInterface.Netstandard16.Test/CanInterface.Test.csproj
+++ b/CanInterface.Netstandard16.Test/CanInterface.Test.csproj
@@ -1,7 +1,13 @@
 ﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
   <PropertyGroup>
-    <TargetFramework>netstandard1.4</TargetFramework>
+    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFrameworkIdentifier>.NETStandard</TargetFrameworkIdentifier>
+    <TargetFrameworkVersion>v1.6</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputType>library</OutputType>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" />
@@ -10,14 +16,18 @@
   <ItemGroup>
     <PackageReference Include="NETStandard.Library">
       <Version>1.6.1</Version>
+      <Private>true</Private>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Sdk">
       <Version>1.0.0-alpha-20161104-2</Version>
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="System.ValueTuple">
-      <Version>4.3.0</Version>
-    </PackageReference>
+    <PackageReference Include="NUnit" Version="3.6.0-dev-03481" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CanInterface\CanInterface.csproj">
+      <Private>true</Private>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
