more unit tests

--- a/CanInterface.Test/CanInterface.Test.csproj
+++ b/CanInterface.Test/CanInterface.Test.csproj
@@ -49,6 +49,8 @@
   <ItemGroup>
     <Compile Include="MCP2515\BitStructures\CanControlRegisterTests.cs" />
     <Compile Include="MCP2515\BitStructures\CanInterruptEnableRegisterTests.cs" />
+    <Compile Include="MCP2515\BitStructures\CanInterruptFlagRegisterTests.cs" />
+    <Compile Include="MCP2515\BitStructures\CanStatusRegisterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
