--- a/CanInterface.Test/CanInterface.Test.csproj
+++ b/CanInterface.Test/CanInterface.Test.csproj
@@ -50,7 +50,7 @@
     <Compile Include="MCP2515\BitStructures\CanControlRegisterTests.cs" />
     <Compile Include="MCP2515\BitStructures\CanInterruptEnableRegisterTests.cs" />
     <Compile Include="MCP2515\BitStructures\CanInterruptFlagRegisterTests.cs" />
-    <Compile Include="MCP2515\BitStructures\CanStatusRegisterTest.cs" />
+    <Compile Include="MCP2515\BitStructures\CanStatusRegisterTests.cs" />
     <Compile Include="MCP2515\BitStructures\Configuration1RegisterTests.cs" />
     <Compile Include="MCP2515\BitStructures\Configuration2RegisterTests.cs" />
     <Compile Include="MCP2515\BitStructures\Configuration3RegisterTests.cs" />
