--- a/CanLogger/project.json
+++ b/CanLogger/project.json
@@ -1,11 +1,12 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "NUnit": "3.5.0",
-    "System.ValueTuple": "4.3.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0-beta2"
   },
   "frameworks": {
-    "uap10.0": {}
+    "uap10.0": {
+      "import": [ "netstandard1.6" ] 
+
+    }
   },
   "runtimes": {
     "win10-arm": {},
