--- a/UwpImplementation.Windows.Devices.NetStandardWrappers/project.json
+++ b/UwpImplementation.Windows.Devices.NetStandardWrappers/project.json
@@ -1,9 +1,11 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0-beta2"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0"
   },
   "frameworks": {
-    "uap10.0": {}
+    "uap10.0": {
+      "import": [ "netstandard1.6" ]
+    }
   },
   "runtimes": {
     "win10-arm": {},
