--- a/CanInterface/CanInterface.csproj
+++ b/CanInterface/CanInterface.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="NUnit.Console" Version="3.6.0" />
+    <PackageReference Include="NUnit.Runners" Version="3.6.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.7.0" />
     <PackageReference Include="System.ValueTuple" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
