--- a/UwpImplementation.Windows.Devices.NetStandardWrappers/project.json
+++ b/UwpImplementation.Windows.Devices.NetStandardWrappers/project.json
@@ -1,10 +1,12 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.0",
   },
   "frameworks": {
     "uap10.0": {
-      "import": [ "netstandard1.6" ]
+      "import": [
+        "netstandard1.6"
+      ]
     }
   },
   "runtimes": {
